# hands-on-ml

./: analysis.ipynb  pyproject.toml
c2-e2e_ml_project/: analysis.ipynb
c3-classification/: README.md  ex12.ipynb  ex3_titanic.ipynb  pyproject.toml
c4-training_models/: exercises.md  gradient_descent.ipynb  pyproject.toml
c5-svm/: exercises.ipynb  pyproject.toml
