[tool.poetry]
name = "c5-svm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
numpy = "^2.1.1"
jupyter = "^1.1.1"
notebook = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
